# octar

./: .gitignore  ChangeLog.md  README.md  default.nix  octar.cabal  test-alpha.yaml  test-beta.yaml  test-client.yaml
lib/: Octar.hs
lib/Octar/: CLI.hs  Config.hs  Discard.hs  Entry.hs  Gateway.hs  GatewayProxy.hs  GatewayServer.hs  Index.hs  Index2.hs  IndexServer.hs  Live.hs  Metadata.hs  Method.hs  Pin.hs
lib/Octar/CLI/: Opts.hs
lib/Octar/Index/: Frontend.hs
lib/Octar/Index/Frontend/: StaticWeb.hs
lib/Octar/Method/: Common.hs
lib/Turtle/: Git.hs  Ipfs.hs
main/: Main.hs
