name:                octar
version:             0.3.1.1
synopsis:            replicated archive organization
category:            Database, Network
description:
  @octar@ is a library/tool for systematically fetching and labeling
  data from a variety of sources.  It uses IPFS as a storage backend
  and git as an index manager, which together provide:
  .
  1. Duplication avoidance
  .
  2. Easy replication/backups
  .
  3. Transparent access from multiple machines

license:             GPL-3
license-file:        LICENSE
author:              octalsrc
maintainer:          octal@octalsrc.org
homepage:            https://github.com/octalsrc/octar
copyright:           (c) 2018 Nicholas V. Lewchenko
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Octar
                     , Octar.CLI
                     , Turtle.Ipfs
                     , Turtle.Git
  other-modules:       Octar.Index
                     , Octar.Index.Frontend
                     , Octar.Entry
                     , Octar.Metadata
                     , Octar.Method
                     , Octar.Method.Common
                     , Octar.CLI.Opts
  build-depends:
    base                 >= 4.10.0 && < 4.13,
    aeson                >= 1.2.4 && < 1.5,
    text                 >= 1.2.2 && < 1.3,
    time                 >= 1.8.0 && < 1.9,
    optparse-applicative >= 0.14.0 && < 0.15,
    turtle               >= 1.4.5 && < 1.6,
    yaml                 >= 0.8.28 && < 0.9,
    foldl                >= 1.3.7 && < 1.5,
    containers           >= 0.5.10 && < 0.6,
    bytestring           >= 0.10.8 && < 0.11,
    http-types           >= 0.9.1 && < 0.13,
    mtl                  >= 2.2.2 && < 2.3,
    parsec               >= 3.1.13 && < 3.2
  hs-source-dirs:      lib
  default-language: Haskell2010

executable octar
  main-is:             Main.hs
  build-depends:       base, octar
  hs-source-dirs:      main
  default-language:    Haskell2010
